--- a/font-inspector.html
+++ b/font-inspector.html
@@ -201,7 +201,7 @@ function onReadFile(e) {
     reader.readAsArrayBuffer(file);
 }
 
-var fontFileName = 'fonts/Roboto-Black.ttf';
+var fontFileName = 'fonts/FiraCode-Regular.otf'; // fonts/Roboto-Black.ttf';
 
 document.getElementById('font-name').innerHTML = fontFileName.split('/')[1];
 
